--- a/index.htm
+++ b/index.htm
@@ -1,69 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Md. Ibn Jihan</title>
+    <title>Md. Ibn Jihan - profile</title>
+
+    <!-- Connecting with the styling for the website. -->
     <link rel="stylesheet" href="index.css">
+
+    <!-- Importing IMB Plex Sans from Google Fonts. -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-
-        <div class="nav-container">
-            <div class="profile">
-                <img src="./res/101347202-removebg-preview-removebg-preview.jpg" alt="md.ibnjihan" class="avatar">
+    <header>
+        <div id="sideNav" class="sidebar">
+            <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
+            <div class="nav-container">
+                <div class="profile-container">
+                    <img src="./res/md.ibnjihan-avatar.jpg" alt="md.ibnjihan" class="avatar">
+                </div>
+                <div class="info">
+                    <span class="name">Md. Ibn Jihan</span>
+                    <span class="description">Developing technologies<br>for better services.</span>
+                </div>
+                <nav>
+                    <div class="contact-nav">
+                        <ul class="contact__ul">
+                            <li>
+                                <a href="mailto:md.ibnjihan@outlook.com">
+                                    <img src="./res/mail.ico" class="icon"/>
+                                    md.ibnjihan@outlook.com
+                                </a>
+                            </li>
+                            <li>
+                                <a href="tel:+8801304502377">
+                                    <img src="./res/ic_fluent_call_24_filled.png" class="icon"/>+880 13045-02377
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mailto:md.ibnjihan@outlook.com">
+                                    <img src="./res/ic_fluent_location_24_filled.png" class="icon"/>
+                                    Faridpur, Dhaka, BD - 7804
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/mdibnjihan" target="_blank">
+                                    <img src="./res/GitHub-Mark-32px.png" class="icon"/>
+                                    mdibnjihan
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="info-nav">
+                        <a href="#about" class="info-link">About me</a>
+                        <a href="#work" class="info-link">Work</a>
+                        <a href="#education" class="info-link">Education</a>
+                        <a href="#projects" class="info-link">Projects</a>
+                        <a href="#interest" class="info-link">Interest</a>
+                        <a href="#download" class="info-link">Download</a>
+                    </div>
+                </nav>    
             </div>
-            <div class="info">
-                <span class="name">Md. Ibn Jihan</span>
-                <span class="description">Developing technologies<br>for better services.</span>
-            </div>
-            <div class="contact-nav">
-                <ul class="contact__ul">
-                    <li><a href="mailto:md.ibnjihan@outlook.com"><img src="./res/mail.ico" style="vertical-align: middle; margin-right: 8px;"/>md.ibnjihan@outlook.com</a></li><br>
-                    <li><a href="tel:+8801304502377"><img src="./res/ic_fluent_call_24_filled.png" style="vertical-align: middle; margin-right: 8px; width: 18px;"/>+880 13045-02377</a></li><br>
-                    <li><a href="mailto:md.ibnjihan@outlook.com"><img src="./res/ic_fluent_location_24_filled.png" style="vertical-align: middle; margin-right: 8px; width: 18px"/>Faridpur, Dhaka, BD - 7804</a></li><br>
-                    <li><a href="https://github.com/mdibnjihan" target="_blank"><img src="./res/GitHub-Mark-32px.png" style="vertical-align: middle; margin-right: 8px; width: 16px;"/>mdibnjihan</a></li><br>
-                </ul>
-            </div>
-            <div class="info_nav">
-                <a href="#me" class="inf">About me</a>
-                <a href="#education" class="inf">Education</a>
-                <a href="#work" class="inf">Work</a>
-                <a href="#projects" class="inf">Projects</a>
-                <a href="#interest" class="inf">Interest</a>
-                <a href="#download" class="inf">Download</a>
-            </div>    
         </div>
-    </div>
+    </header>
     <div id="main">
-        <button class="openbtn" onclick="openNav()">&#60;</button>
+        <button class="openbtn" onclick="openNav()">
+            <img src="./res/ic_fluent_pane_open_24_filled.png" height="24" width="24" class="icon">
+        </button>
         <div class="viewbox">
-            <div id="about_me" style="margin-bottom: 12rem;">
-            <p style="font-weight: bold; color: hsl(0, 0%, 0%, 0.50) ;">$ cat readme.txt</p><br>
+            <div id="about" class="mb12">
+            <p class="cmd-like">$ cat readme.txt</p><br>
             <h1>Hey! 👋</h1><br>
             <p>Hi I am Md. Ibn Jihan. I live in Faridpur, Dhaka, Bangladesh. I was born in 31st December, 2005. I started my school in 2009 at Sunrise Pre Cadet School, in 2014 I got mysel admitted to Faridpur Zilla School where I passed my PSC, JSC and SSC. Now I am currently studying at Govt. Rajendra College at K11 - Sceience. I am passionate about sciemce and technologies. I take part in various co-curricular activities. And, I love cats.
                 UwU.<br><br>
                 
                 I loved computers and technologies from my childhood. I am passionate about learning new things, growing interest about applying new solutions. I strated learning programming back in 2015. I am still learning new things and love open source. I mostly spend my leisure time by doing UI Design and coding. I started front-end career in 2018. I love to take challenges no matter how hard they are. I would to love to work with new people, new ennvironment.</p>
             </div>
-            <div id="work" style="margin-bottom: 12rem;">
-                <p style="font-weight: bold; color: hsl(0, 0%, 0%, 0.50) ;">$ cat work.txt</p><br>
+            <div id="work" class="mb12">
+                <p class="cmd-like">$ cat work.txt</p><br>
                 <h1>Work Experience</h1><br>
                 <p>I love working with new people and new environment. It helps to to grow new skills and learn new things and apply techonolgies. Though, I love open source, I have also worked with various local companies.</p>
                 <div class="experience">
-                    <div class="work-card">
+                    <div class="card">
                         <p style="font-size: 1.5rem;
                         font-weight: bold;
                         ">Infitnity Math Club</p>
                         <p>Faridpur, Dhaka, Bangladesh<br>6 July, 2020  - 8th August, 2021</p><br>
                         <p>I worked with the development team there as a contributor. We have built the website and event management system.</p>
                     </div>
-                    <div class="work-card">
+                    <div class="card">
                         <p style="font-size: 1.5rem;
                         font-weight: bold;
                         ">AR Technical Tips Pro</p>
@@ -72,32 +100,32 @@
                     </div>
                 </div>
             </div>
-            <div id="education" style="margin-bottom: 12rem;">
-                <p style="font-weight: bold; color: hsl(0, 0%, 0%, 0.50) ;">$ cat education.txt</p><br>
+            <div id="education" class="mb12">
+                <p class="cmd-like">$ cat education.txt</p><br>
                 <h1>Education</h1><br>
                 <p>I started my school in 2009 at Sunrise Pre Cadet School, in 2014 I got mysel admitted to Faridpur Zilla School where I passed my PSC, JSC and SSC. Now I am currently studying at Govt. Rajendra College at K11 - Sceience.</p>
                 <div class="experience">
-                    <div class="work-card">
+                    <div class="card">
                         <p style="font-size: 1.5rem;
                         font-weight: bold;
                         ">PSC</p>
                         <p>GPA: 5.00</p><br>
                         <p>Year: 2015<br>Board: Dhaka<br>School: Faridpur Zilla School</p>
                     </div>
-                    <div class="work-card">
+                    <div class="card">
                         <p style="font-size: 1.5rem;
                         font-weight: bold;
                         ">JSC</p>
                         <p>GPA: 4.86</p><br>
                         <p>Year: 2018<br>Board: Dhaka<br>School: Faridpur Zilla School</p>
                     </div>
-                    <div class="work-card">
+                    <div class="card">
                         <p style="font-size: 1.5rem;
                         font-weight: bold;
                         ">SSC</p>
                         <p>GPA: 5.00</p><br>
                         <p>Year: 2021<br>Board: Dhaka<br>School: Faridpur Zilla School</p>
-                    </div><div class="work-card">
+                    </div><div class="card">
                         <p style="font-size: 1.5rem;
                         font-weight: bold;
                         ">Certification</p>
@@ -106,18 +134,18 @@
                         <button id="verify-ict_youth" class="btn">Verify</button> 
                     </div>
                 </div>
-                <div class="projects" style="margin-top: 12rem; margin-bottom: 12rem;">
-                    <p style="font-weight: bold; color: hsl(0, 0%, 0%, 0.50) ;">$ cat projects.txt</p><br>
+                <div id="projects" class="mb12">
+                    <p class="cmd-like">$ cat projects.txt</p><br>
                     <h1>Projects</h1><br>
                     <p>Nothing to show at this moment.</p>
                 </div>
-                <div class="interest">
-                    <p style="font-weight: bold; color: hsl(0, 0%, 0%, 0.50) ;">$ cat interest.txt</p><br>
+                <div id="interest" class="mb12">
+                    <p class="cmd-like">$ cat interest.txt</p><br>
                     <h1>Interest</h1>
                     <p style="margin-top: 3rem;">I love Cooking, Basketball, Movies, Writing & Games.</p>
                 </div>
-                <div class="Download" style="margin-top: 12rem;">
-                    <p style="font-weight: bold; color: hsl(0, 0%, 0%, 0.50) ;">$ cat download.txt</p><br>
+                <div id="download" class="mb12">
+                    <p class="cmd-like">$ cat download.txt</p><br>
                     <h1>Download</h1>
                     <p style="margin-top: 3rem;">To downlaod the CV, click on the button to continue.</p>
                     <p style="background-color: rgb(184, 0, 0); 
