--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Md. Ibn Jihan - profile</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./res/favicon-16x16.png">
 
     <!-- Connecting with the styling for the website. -->
     <link rel="stylesheet" href="index.css">
