--- a/index.htm
+++ b/index.htm
@@ -133,7 +133,7 @@
                         ">Certification</p>
                         <p>ICT YOUTH</p><br>
                         <p>ICT Olympiad Bangladesh<br>Powered by: BrightSkills.com</p>
-                        <button id="verify-ict_youth" class="btn">Verify</button> 
+                        <button id="verify-ict_youth" class="btn" onclick="verify()">Verify</button> 
                     </div>
                 </div>
                 <div id="projects" class="mb12">
@@ -153,7 +153,7 @@
                     <p style="background-color: rgb(184, 0, 0); 
                     margin: 1rem 1re 1rem 0;
                     border-radius: 10000px;
-                    padding: 0.5em;
+                    padding: 0.5em 1em;
                     color: white;
                     display: inline;
                     font-size: small;
