--- a/index.htm
+++ b/index.htm
@@ -68,102 +68,105 @@
             </div>
         </div>
     </header>
-    <div id="main">
-        <button class="openbtn" onclick="openNav()">
-            <img src="./res/ic_fluent_pane_open_24_filled.png" height="24" width="24" class="icon">
-        </button>
-        <div class="viewbox">
-            <div id="about" class="mb12">
-            <p class="cmd-like">$ cat readme.txt</p><br>
-            <h1>Hey! 👋</h1><br>
-            <p>Hi I am Md. Ibn Jihan. I live in Faridpur, Dhaka, Bangladesh. I was born in 31st December, 2005. I started my school in 2009 at Sunrise Pre Cadet School, in 2014 I got mysel admitted to Faridpur Zilla School where I passed my PSC, JSC and SSC. Now I am currently studying at Govt. Rajendra College at K11 - Sceience. I am passionate about sciemce and technologies. I take part in various co-curricular activities. And, I love cats.
-                UwU.<br><br>
-                
-                I loved computers and technologies from my childhood. I am passionate about learning new things, growing interest about applying new solutions. I strated learning programming back in 2015. I am still learning new things and love open source. I mostly spend my leisure time by doing UI Design and coding. I started front-end career in 2018. I love to take challenges no matter how hard they are. I would to love to work with new people, new ennvironment.</p>
-            </div>
-            <div id="work" class="mb12">
-                <p class="cmd-like">$ cat work.txt</p><br>
-                <h1>Work Experience</h1><br>
-                <p>I love working with new people and new environment. It helps to to grow new skills and learn new things and apply techonolgies. Though, I love open source, I have also worked with various local companies.</p>
-                <div class="experience">
-                    <div class="card">
-                        <p style="font-size: 1.5rem;
-                        font-weight: bold;
-                        ">Infitnity Math Club</p>
-                        <p>Faridpur, Dhaka, Bangladesh<br>6 July, 2020  - 8th August, 2021</p><br>
-                        <p>I worked with the development team there as a contributor. We have built the website and event management system.</p>
-                    </div>
-                    <div class="card">
-                        <p style="font-size: 1.5rem;
-                        font-weight: bold;
-                        ">AR Technical Tips Pro</p>
-                        <p>Faridpur, Dhaka, Bangladesh<br>1 March, 2018  - 9 June, 2021</p><br>
-                        <p>Atonu Roy is a tehcnology review content creator. I worked with him and developed the website and giveaway management.</p>
+    <main>
+        <div id="main">
+            <button class="openbtn" onclick="openNav()">
+                <img src="./res/ic_fluent_pane_open_24_filled.png" height="24" width="24" class="icon">
+            </button>
+            <div class="viewbox">
+                <div id="about" class="mb12">
+                <p class="cmd-like">$ cat readme.txt</p><br>
+                <h1>Hey! 👋</h1><br>
+                <p>Hi I am Md. Ibn Jihan. I live in Faridpur, Dhaka, Bangladesh. I was born in 31st December, 2005. I started my school in 2009 at Sunrise Pre Cadet School, in 2014 I got mysel admitted to Faridpur Zilla School where I passed my PSC, JSC and SSC. Now I am currently studying at Govt. Rajendra College at K11 - Sceience. I am passionate about sciemce and technologies. I take part in various co-curricular activities. And, I love cats.
+                    UwU.<br><br>
+                    
+                    I loved computers and technologies from my childhood. I am passionate about learning new things, growing interest about applying new solutions. I strated learning programming back in 2015. I am still learning new things and love open source. I mostly spend my leisure time by doing UI Design and coding. I started front-end career in 2018. I love to take challenges no matter how hard they are. I would to love to work with new people, new ennvironment.</p>
+                </div>
+                <div id="work" class="mb12">
+                    <p class="cmd-like">$ cat work.txt</p><br>
+                    <h1>Work Experience</h1><br>
+                    <p>I love working with new people and new environment. It helps to to grow new skills and learn new things and apply techonolgies. Though, I love open source, I have also worked with various local companies.</p>
+                    <div class="experience">
+                        <div class="card">
+                            <p style="font-size: 1.5rem;
+                            font-weight: bold;
+                            ">Infitnity Math Club</p>
+                            <p>Faridpur, Dhaka, Bangladesh<br>6 July, 2020  - 8th August, 2021</p><br>
+                            <p>I worked with the development team there as a contributor. We have built the website and event management system.</p>
+                        </div>
+                        <div class="card">
+                            <p style="font-size: 1.5rem;
+                            font-weight: bold;
+                            ">AR Technical Tips Pro</p>
+                            <p>Faridpur, Dhaka, Bangladesh<br>1 March, 2018  - 9 June, 2021</p><br>
+                            <p>Atonu Roy is a tehcnology review content creator. I worked with him and developed the website and giveaway management.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div id="education" class="mb12">
-                <p class="cmd-like">$ cat education.txt</p><br>
-                <h1>Education</h1><br>
-                <p>I started my school in 2009 at Sunrise Pre Cadet School, in 2014 I got mysel admitted to Faridpur Zilla School where I passed my PSC, JSC and SSC. Now I am currently studying at Govt. Rajendra College at K11 - Sceience.</p>
-                <div class="experience">
-                    <div class="card">
-                        <p style="font-size: 1.5rem;
-                        font-weight: bold;
-                        ">PSC</p>
-                        <p>GPA: 5.00</p><br>
-                        <p>Year: 2015<br>Board: Dhaka<br>School: Faridpur Zilla School</p>
+                <div id="education" class="mb12">
+                    <p class="cmd-like">$ cat education.txt</p><br>
+                    <h1>Education</h1><br>
+                    <p>I started my school in 2009 at Sunrise Pre Cadet School, in 2014 I got mysel admitted to Faridpur Zilla School where I passed my PSC, JSC and SSC. Now I am currently studying at Govt. Rajendra College at K11 - Sceience.</p>
+                    <div class="experience">
+                        <div class="card">
+                            <p style="font-size: 1.5rem;
+                            font-weight: bold;
+                            ">PSC</p>
+                            <p>GPA: 5.00</p><br>
+                            <p>Year: 2015<br>Board: Dhaka<br>School: Faridpur Zilla School</p>
+                        </div>
+                        <div class="card">
+                            <p style="font-size: 1.5rem;
+                            font-weight: bold;
+                            ">JSC</p>
+                            <p>GPA: 4.86</p><br>
+                            <p>Year: 2018<br>Board: Dhaka<br>School: Faridpur Zilla School</p>
+                        </div>
+                        <div class="card">
+                            <p style="font-size: 1.5rem;
+                            font-weight: bold;
+                            ">SSC</p>
+                            <p>GPA: 5.00</p><br>
+                            <p>Year: 2021<br>Board: Dhaka<br>School: Faridpur Zilla School</p>
+                        </div><div class="card">
+                            <p style="font-size: 1.5rem;
+                            font-weight: bold;
+                            ">Certification</p>
+                            <p>ICT YOUTH</p><br>
+                            <p>ICT Olympiad Bangladesh<br>Powered by: BrightSkills.com</p>
+                            <button id="verify-ict_youth" class="btn" onclick="verify()">Verify</button> 
+                        </div>
                     </div>
-                    <div class="card">
-                        <p style="font-size: 1.5rem;
-                        font-weight: bold;
-                        ">JSC</p>
-                        <p>GPA: 4.86</p><br>
-                        <p>Year: 2018<br>Board: Dhaka<br>School: Faridpur Zilla School</p>
+                    <div id="projects" class="mb12">
+                        <p class="cmd-like">$ cat projects.txt</p><br>
+                        <h1>Projects</h1><br>
+                        <p>Nothing to show at this moment.</p>
                     </div>
-                    <div class="card">
-                        <p style="font-size: 1.5rem;
-                        font-weight: bold;
-                        ">SSC</p>
-                        <p>GPA: 5.00</p><br>
-                        <p>Year: 2021<br>Board: Dhaka<br>School: Faridpur Zilla School</p>
-                    </div><div class="card">
-                        <p style="font-size: 1.5rem;
-                        font-weight: bold;
-                        ">Certification</p>
-                        <p>ICT YOUTH</p><br>
-                        <p>ICT Olympiad Bangladesh<br>Powered by: BrightSkills.com</p>
-                        <button id="verify-ict_youth" class="btn" onclick="verify()">Verify</button> 
+                    <div id="interest" class="mb12">
+                        <p class="cmd-like">$ cat interest.txt</p><br>
+                        <h1>Interest</h1>
+                        <p style="margin-top: 3rem;">I love Cooking, Basketball, Movies, Writing & Games.</p>
                     </div>
-                </div>
-                <div id="projects" class="mb12">
-                    <p class="cmd-like">$ cat projects.txt</p><br>
-                    <h1>Projects</h1><br>
-                    <p>Nothing to show at this moment.</p>
-                </div>
-                <div id="interest" class="mb12">
-                    <p class="cmd-like">$ cat interest.txt</p><br>
-                    <h1>Interest</h1>
-                    <p style="margin-top: 3rem;">I love Cooking, Basketball, Movies, Writing & Games.</p>
-                </div>
-                <div id="download" class="mb12">
-                    <p class="cmd-like">$ cat download.txt</p><br>
-                    <h1>Download</h1>
-                    <p style="margin-top: 3rem;">To downlaod the CV, click on the button to continue.</p>
-                    <p style="background-color: rgb(184, 0, 0); 
-                    margin: 1rem 1re 1rem 0;
-                    border-radius: 10000px;
-                    padding: 0.5em 1em;
-                    color: white;
-                    display: inline;
-                    font-size: small;
-                    font-weight: lighter;
-                    ">I am not available for work at this moment.</p><br>
-                    <button class="btn disabled">Download</button>
+                    <div id="download" class="mb12">
+                        <p class="cmd-like">$ cat download.txt</p><br>
+                        <h1>Download</h1>
+                        <p style="margin-top: 3rem;">To downlaod the CV, click on the button to continue.</p>
+                        <p style="background-color: rgb(184, 0, 0); 
+                        margin: 1rem 1re 1rem 0;
+                        border-radius: 10000px;
+                        padding: 0.5em 1em;
+                        color: white;
+                        display: inline;
+                        font-size: small;
+                        font-weight: lighter;
+                        ">I am not available for work at this moment.</p><br>
+                        <button class="btn disabled">Download</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
+    <!-- Connects Javascript file to HTML-->
     <script src="index.js"></script>
 </body>
 </html>
