Fixed a few here and there.

--- a/index.htm
+++ b/index.htm
@@ -77,15 +77,15 @@
                 <div id="about" class="mb12">
                 <p class="cmd-like">$ cat readme.txt</p><br>
                 <h1>Hey! 👋</h1><br>
-                <p>Hi I am Md. Ibn Jihan. I live in Faridpur, Dhaka, Bangladesh. I was born in 31st December, 2005. I started my school in 2009 at Sunrise Pre Cadet School, in 2014 I got mysel admitted to Faridpur Zilla School where I passed my PSC, JSC and SSC. Now I am currently studying at Govt. Rajendra College at K11 - Sceience. I am passionate about sciemce and technologies. I take part in various co-curricular activities. And, I love cats.
+                <p>Hi I am Md. Ibn Jihan. I live in Faridpur, Dhaka, Bangladesh. I was born in 31st December, 2005. I started my school in 2009 at Sunrise Pre Cadet School, in 2014 I got mysel admitted to Faridpur Zilla School where I passed my PSC, JSC and SSC. Now I am currently studying at Govt. Rajendra College at K11 - Sceience. I am passionate about science and technologies. I take part in various co-curricular activities. And, I love cats.
                     UwU.<br><br>
                     
-                    I loved computers and technologies from my childhood. I am passionate about learning new things, growing interest about applying new solutions. I strated learning programming back in 2015. I am still learning new things and love open source. I mostly spend my leisure time by doing UI Design and coding. I started front-end career in 2018. I love to take challenges no matter how hard they are. I would to love to work with new people, new ennvironment.</p>
+                    I loved computers and technologies from my childhood. I am passionate about learning new things, growing interest about applying new solutions. I started learning programming back in 2015. I am still learning new things and love open source. I mostly spend my leisure time by doing UI Design and coding. I started front-end career in 2018. I love to take challenges no matter how hard they are. I would love to work with new people, new environment.</p>
                 </div>
                 <div id="work" class="mb12">
                     <p class="cmd-like">$ cat work.txt</p><br>
                     <h1>Work Experience</h1><br>
-                    <p>I love working with new people and new environment. It helps to to grow new skills and learn new things and apply techonolgies. Though, I love open source, I have also worked with various local companies.</p>
+                    <p>I love working with new people and new environment. It helps me to grow new skills, learn new things and apply techonolgies. Though, I love open source, I have also worked with various local companies.</p>
                     <div class="experience">
                         <div class="card">
                             <p style="font-size: 1.5rem;
@@ -150,7 +150,7 @@
                     <div id="download" class="mb12">
                         <p class="cmd-like">$ cat download.txt</p><br>
                         <h1>Download</h1>
-                        <p style="margin-top: 3rem;">To downlaod the CV, click on the button to continue.</p>
+                        <p style="margin-top: 3rem;">To downlaod the resume, click on the button to continue.</p>
                         <p style="background-color: rgb(184, 0, 0); 
                         margin: 1rem 1re 1rem 0;
                         border-radius: 10000px;
